--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Calthera adalah klinik psikologi & tumbuh kembang anak di Pekanbaru. Screening, terapi anak, konseling, asesmen psikologis, dan psikoterapi." />
   <style>
     :root{
-      --brand-1:#88ab8e; /* green */
-      --brand-2:#ffb570; /* orange */
-      --brand-3:#f6f0eb; /* cream */
+      --brand-1:#88ab8e;
+      --brand-2:#ffb570;
+      --brand-3:#f6f0eb;
       --ink:#0f172a;
       --muted:#475569;
       --card:#ffffff;
@@ -77,9 +77,7 @@
       height: 34px;
       object-fit:contain;
     }
-    .brand .text{
-      line-height: 1.1;
-    }
+    .brand .text{line-height: 1.1;}
     .brand .text b{
       display:block;
       font-size: 15px;
@@ -126,30 +124,29 @@
       border-color: rgba(255,181,112,.45);
     }
 
-    /* HERO (integrated illustration background, NO picture frame) */
+    /* HERO (NO FRAME / NO CARD LOOK) */
     .hero{
       padding: 26px 0 10px;
     }
+
+    /* IMPORTANT: remove card look */
     .hero-card{
       position: relative;
-      border-radius: var(--radius-lg);
-      background:
-        radial-gradient(900px 420px at 20% 0%, rgba(255,181,112,.20), transparent 60%),
-        radial-gradient(900px 420px at 90% 10%, rgba(136,171,142,.22), transparent 58%),
-        linear-gradient(180deg, rgba(246,240,235,.75), rgba(255,255,255,.92));
-      box-shadow: var(--shadow);
-      overflow:hidden;
+      border-radius: 0;
+      background: transparent;
+      box-shadow: none;
+      overflow: visible;
     }
 
-    /* illustration as integrated background (no box/border) */
+    /* Illustration integrated into background */
     .hero-card::after{
       content:"";
       position:absolute;
-      inset: 0;
+      inset: -10px 0 0 0; /* bleed a bit upward */
       background-image: url("assetshero-illustration.png");
       background-repeat:no-repeat;
-      background-position: right 36px bottom 18px;
-      background-size: min(760px, 58vw);
+      background-position: right 0px center;
+      background-size: min(880px, 62vw);
       opacity: 1;
       pointer-events:none;
       filter: saturate(1.02);
@@ -158,20 +155,21 @@
     .hero-inner{
       position: relative;
       z-index: 1;
-      padding: 44px 44px 40px;
-      display:block;               /* remove 2-column grid */
-      min-height: 360px;
+      padding: 26px 0 10px;
+      min-height: 420px;
+      display:flex;
+      align-items:center;
     }
 
-    /* readable text block but still "integrated" */
+    /* IMPORTANT: remove white panel / frame look */
     .hero-left{
       max-width: 640px;
-      padding: 26px 26px 22px;
-      border-radius: 22px;
-      background: rgba(255,255,255,.78);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-      box-shadow: 0 18px 45px rgba(10, 25, 20, .08);
+      padding: 0;                 /* no card padding */
+      border-radius: 0;
+      background: transparent;     /* <- no white box */
+      box-shadow: none;            /* <- no shadow */
+      backdrop-filter: none;
+      -webkit-backdrop-filter: none;
     }
 
     .hero h1{
@@ -195,7 +193,7 @@
       margin-top: 8px;
     }
 
-    /* REMOVE hours mini card completely */
+    /* remove hours */
     .hours{display:none !important}
 
     /* focus line (no box, centered) */
@@ -207,10 +205,8 @@
       line-height: 1.7;
     }
 
-    /* 3 big service highlight cards (smooth, no visible border) */
-    .pill-cards{
-      padding: 14px 0 26px;
-    }
+    /* 3 big service highlight cards (smooth, no border line) */
+    .pill-cards{padding: 14px 0 26px;}
     .pill-grid{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -221,30 +217,18 @@
       padding: 18px 18px 16px;
       box-shadow: var(--shadow-soft);
       background: rgba(255,255,255,.86);
-      border: none; /* no border */
+      border: none;
       transition: transform .15s ease, box-shadow .15s ease;
       min-height: 132px;
     }
     .pill:hover{transform: translateY(-1px); box-shadow: 0 16px 30px rgba(15,23,42,.10)}
-    .pill h3{
-      margin: 0 0 6px;
-      font-size: 16px;
-      letter-spacing: -0.01em;
-    }
-    .pill p{
-      margin: 0;
-      color: var(--muted);
-      font-size: 13.5px;
-      line-height: 1.6;
-    }
+    .pill h3{margin: 0 0 6px; font-size: 16px; letter-spacing: -0.01em;}
+    .pill p{margin: 0; color: var(--muted); font-size: 13.5px; line-height: 1.6;}
     .pill.tk{background: rgba(136,171,142,.14)}
     .pill.kp{background: rgba(255,181,112,.18)}
     .pill.ak{background: rgba(246,240,235,.95)}
 
-    /* sections */
-    section{
-      padding: 38px 0;
-    }
+    section{padding: 38px 0;}
     .section-title{
       display:flex;
       align-items:flex-end;
@@ -252,11 +236,7 @@
       gap: 14px;
       margin-bottom: 14px;
     }
-    .section-title h2{
-      margin:0;
-      font-size: 26px;
-      letter-spacing: -0.02em;
-    }
+    .section-title h2{margin:0; font-size: 26px; letter-spacing: -0.02em;}
     .section-title p{
       margin: 0;
       color: var(--muted);
@@ -277,7 +257,7 @@
       padding: 18px 18px 16px;
       background: rgba(255,255,255,.88);
       box-shadow: var(--shadow-soft);
-      border: none; /* smooth, no border */
+      border: none;
     }
     .svc-card header{
       display:flex;
@@ -286,14 +266,8 @@
       gap: 10px;
       margin-bottom: 10px;
     }
-    .svc-card header b{
-      font-size: 16px;
-      letter-spacing: -0.01em;
-    }
-    .svc-card small{
-      color: var(--muted);
-      font-size: 13px;
-    }
+    .svc-card header b{font-size: 16px; letter-spacing: -0.01em;}
+    .svc-card small{color: var(--muted); font-size: 13px;}
     .svc-card ul{
       margin: 10px 0 0;
       padding: 0 0 0 18px;
@@ -314,30 +288,21 @@
       background: rgba(255,255,255,.88);
       box-shadow: var(--shadow-soft);
       overflow:hidden;
-      border: none; /* smooth, no border */
+      border: none;
     }
     .gcard .ph{
       aspect-ratio: 4 / 3;
       background: rgba(246,240,235,.8);
       overflow:hidden;
     }
-    .gcard img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+    .gcard img{width: 100%; height: 100%; object-fit: cover;}
     .gcard .cap{
       padding: 12px 14px 13px;
       color: var(--muted);
       font-size: 13.5px;
       line-height: 1.5;
     }
-    .gcard .cap b{
-      display:block;
-      color: var(--ink);
-      font-size: 14px;
-      margin-bottom: 3px;
-    }
+    .gcard .cap b{display:block; color: var(--ink); font-size: 14px; margin-bottom: 3px;}
 
     /* contact */
     .contact-grid{
@@ -351,7 +316,7 @@
       border-radius: var(--radius);
       background: rgba(255,255,255,.88);
       box-shadow: var(--shadow-soft);
-      border: none; /* smooth, no border */
+      border: none;
       padding: 18px;
     }
     .info-row{
@@ -373,7 +338,7 @@
     .map{
       border-radius: var(--radius);
       overflow:hidden;
-      border: none; /* smooth, no border */
+      border: none;
       box-shadow: var(--shadow-soft);
       background: rgba(246,240,235,.8);
       min-height: 360px;
@@ -407,17 +372,12 @@
     /* responsive */
     @media (max-width: 980px){
       .hero-inner{
-        padding: 30px 18px 280px; /* room for illustration at bottom */
+        padding: 18px 0 320px; /* room for illustration */
         min-height: unset;
       }
       .hero-card::after{
         background-position: center bottom 10px;
-        background-size: 92vw auto;
-        opacity: .98;
-        filter: saturate(1.02) contrast(1.02);
-      }
-      .hero-left{
-        max-width: 100%;
+        background-size: 96vw auto;
       }
       .pill-grid, .svc-grid, .gallery, .contact-grid{
         grid-template-columns: 1fr;
@@ -467,8 +427,6 @@
                 <a class="btn secondary" href="#kontak">Lihat Lokasi &amp; Jam Buka</a>
                 <a class="btn" href="#layanan">Lihat Layanan</a>
               </div>
-
-              <!-- hours REMOVED -->
             </div>
           </div>
         </div>
@@ -502,7 +460,6 @@
         <div class="section-title">
           <div>
             <h2>Layanan Calthera</h2>
-            <p>Dikelompokkan sesuai 3 bidang utama layanan di Calthera (tanpa price list).</p>
           </div>
         </div>
 
