--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       --brand-3:#f6f0eb;
       --ink:#0f172a;
       --muted:#475569;
-      --card:#ffffff;
       --shadow: 0 18px 40px rgba(15, 23, 42, .08);
       --shadow-soft: 0 10px 24px rgba(15, 23, 42, .06);
       --radius: 22px;
@@ -124,12 +123,13 @@
       border-color: rgba(255,181,112,.45);
     }
 
-    /* HERO (NO FRAME / NO CARD LOOK) */
-    .hero{
-      padding: 26px 0 10px;
-    }
+    /* HERO */
+    .hero{ padding: 26px 0 10px; }
 
-    /* IMPORTANT: remove card look */
+    /*
+      IMPORTANT: make illustration full-bleed to screen width (kotak hijau #3),
+      while text stays inside container.
+    */
     .hero-card{
       position: relative;
       border-radius: 0;
@@ -138,18 +138,24 @@
       overflow: visible;
     }
 
-    /* Illustration integrated into background */
+    /* Full-bleed background layer */
     .hero-card::after{
       content:"";
       position:absolute;
-      inset: -10px 0 0 0; /* bleed a bit upward */
+      top: -10px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100vw;          /* <-- full width of viewport */
+      height: 100%;
+      min-height: 420px;
       background-image: url("assetshero-illustration.png");
       background-repeat:no-repeat;
-      background-position: right 0px center;
-      background-size: min(880px, 62vw);
-      opacity: 1;
+      background-position: center right;  /* push scene to the right side nicely */
+      background-size: cover;             /* <-- fills full width */
       pointer-events:none;
+      opacity: 1;
       filter: saturate(1.02);
+      z-index: 0;
     }
 
     .hero-inner{
@@ -161,15 +167,18 @@
       align-items:center;
     }
 
-    /* IMPORTANT: remove white panel / frame look */
+    /*
+      IMPORTANT: add "frame" (kotak merah #1) so text is not disturbed by image.
+      This is a soft glass/white panel.
+    */
     .hero-left{
       max-width: 640px;
-      padding: 0;                 /* no card padding */
-      border-radius: 0;
-      background: transparent;     /* <- no white box */
-      box-shadow: none;            /* <- no shadow */
-      backdrop-filter: none;
-      -webkit-backdrop-filter: none;
+      padding: 28px 28px 22px;
+      border-radius: 24px;
+      background: rgba(255,255,255,.78);
+      box-shadow: 0 16px 34px rgba(15,23,42,.10);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
     }
 
     .hero h1{
@@ -196,7 +205,7 @@
     /* remove hours */
     .hours{display:none !important}
 
-    /* focus line (no box, centered) */
+    /* focus line */
     .focus{
       text-align:center;
       padding: 18px 0 8px;
@@ -205,7 +214,7 @@
       line-height: 1.7;
     }
 
-    /* 3 big service highlight cards (smooth, no border line) */
+    /* 3 highlight cards */
     .pill-cards{padding: 14px 0 26px;}
     .pill-grid{
       display:grid;
@@ -245,7 +254,6 @@
       max-width: 62ch;
     }
 
-    /* service lists (3 columns with bullets) */
     .svc-grid{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -276,7 +284,6 @@
       font-size: 14px;
     }
 
-    /* gallery */
     .gallery{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -304,7 +311,6 @@
     }
     .gcard .cap b{display:block; color: var(--ink); font-size: 14px; margin-bottom: 3px;}
 
-    /* contact */
     .contact-grid{
       display:grid;
       grid-template-columns: 1fr 1.2fr;
@@ -369,15 +375,23 @@
       opacity: .95;
     }
 
-    /* responsive */
     @media (max-width: 980px){
       .hero-inner{
-        padding: 18px 0 320px; /* room for illustration */
+        padding: 18px 0 320px;
         min-height: unset;
       }
       .hero-card::after{
-        background-position: center bottom 10px;
-        background-size: 96vw auto;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100vw;
+        background-position: center bottom;
+        background-size: cover;
+      }
+      .hero-left{
+        padding: 22px 20px 18px;
+        border-radius: 22px;
+        background: rgba(255,255,255,.86);
+        box-shadow: 0 14px 28px rgba(15,23,42,.10);
       }
       .pill-grid, .svc-grid, .gallery, .contact-grid{
         grid-template-columns: 1fr;
@@ -460,6 +474,7 @@
         <div class="section-title">
           <div>
             <h2>Layanan Calthera</h2>
+            <p>Dikelompokkan sesuai 3 bidang utama layanan di Calthera (tanpa price list).</p>
           </div>
         </div>
 
