--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
       align-items:center;
       gap: 10px;
     }
-    .foot .mini img{
-      width: 28px;
-      height: 28px;
-      object-fit:contain;
-      opacity: .95;
+.foot .mini img{
+  height: 36px;  
+  width: auto;
+  object-fit: contain;
+  opacity: .95;
     }
 
     /* responsive */
@@ -433,7 +433,7 @@
         max-width: unset;
       }
       .pill-grid, .svc-grid, .gallery, .contact-grid{ grid-template-columns: 1fr; }
-      .nav-inner{padding: 12px 0}
+      .nav-inner{padding: 18px 0}
       .brand{min-width: unset}
     }
   </style>
