--- a/index.html
+++ b/index.html
@@ -22,15 +22,30 @@
 
     *{box-sizing:border-box}
     html,body{height:100%}
+    html{background:#fff;}
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
       color:var(--ink);
+      background:#fff;           /* <-- background solid */
+      position:relative;
+      overflow-x:hidden;
+    }
+
+    /* FIX: background gradient jadi fixed layer biar scroll mulus tanpa “garis” */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      z-index:-1;
       background:
         radial-gradient(1200px 600px at 15% 15%, rgba(255,181,112,.20), transparent 60%),
         radial-gradient(900px 520px at 85% 10%, rgba(136,171,142,.22), transparent 55%),
         linear-gradient(180deg, #fff, #fff);
+      will-change: transform;
+      transform: translateZ(0);
     }
+
     a{color:inherit; text-decoration:none}
     img{max-width:100%; display:block}
 
@@ -46,7 +61,7 @@
       z-index: 50;
       backdrop-filter: blur(10px);
       background: rgba(255,255,255,.72);
-      border-bottom: 1px solid rgba(15,23,42,.06);
+      border-bottom: 0; /* <-- hilangin garis tipis */
     }
     .nav-inner{
       display:flex;
@@ -61,20 +76,22 @@
       gap: 12px;
       min-width: 220px;
     }
-    .brand .logo{
-  background:none;
-  box-shadow:none;
-  width:auto;
-  height:auto;
-  padding:0;
-}
 
-.brand .logo img{
-  height:58px;     /* Atur tinggi logo */
-  width:auto;      /* Biar mengikuti rasio */
-  object-fit:contain;
-  display:block;
-}
+    /* LOGO (memanjang) */
+    .brand .logo{
+      background:none;
+      box-shadow:none;
+      width:auto;
+      height:auto;
+      padding:0;
+    }
+    .brand .logo img{
+      height:58px;     /* Atur tinggi logo */
+      width:auto;      /* Biar mengikuti rasio */
+      object-fit:contain;
+      display:block;
+    }
+
     .brand .text{line-height: 1.1;}
     .brand .text b{
       display:block;
@@ -124,15 +141,17 @@
 
     /* HERO (FULL-BLEED, NO GAP AFTER HEADER) */
     .hero{
-      padding: 0; /* <— no “bocor” gap */
+      padding: 0;
     }
     .hero-card{
       position: relative;
       width: 100%;
-      border-radius: 0;          /* full-bleed */
-      box-shadow: none;          /* smooth */
+      border-radius: 0;
+      box-shadow: none;
       overflow: hidden;
-      background: linear-gradient(180deg, rgba(246,240,235,.45), rgba(255,255,255,.70));
+      background: transparent; /* <-- penting biar gak ada “seam” */
+      transform: translateZ(0);
+      will-change: transform;
     }
 
     /* illustration as FULL background (edge-to-edge, taller) */
@@ -143,21 +162,22 @@
       background-image: url("assetshero-illustration.png");
       background-repeat:no-repeat;
       background-position: center right;
-      background-size: cover;     /* <— full width like contoh */
+      background-size: cover;
       opacity: 1;
       pointer-events:none;
       filter: saturate(1.02);
-      transform: scale(1.02);     /* tiny scale to avoid 1px edges on some browsers */
+      transform: scale(1.03); /* anti 1px seam */
     }
 
-    /* readability overlay (left side brighter so text clear) */
+    /* readability overlay + bottom fade (biar transisi ke bawah halus) */
     .hero-card::before{
       content:"";
       position:absolute;
       inset: 0;
       background:
         radial-gradient(900px 520px at 18% 40%, rgba(255,255,255,.95), rgba(255,255,255,.65) 45%, rgba(255,255,255,0) 75%),
-        linear-gradient(90deg, rgba(255,255,255,.85) 0%, rgba(255,255,255,.55) 42%, rgba(255,255,255,0) 70%);
+        linear-gradient(90deg, rgba(255,255,255,.85) 0%, rgba(255,255,255,.55) 42%, rgba(255,255,255,0) 70%),
+        linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 80%, rgba(255,255,255,.90) 100%);
       pointer-events:none;
       z-index: 0;
     }
@@ -173,7 +193,7 @@
       grid-template-columns: 1.05fr .95fr;
       gap: 24px;
       align-items:center;
-      min-height: 520px; /* <— lebih panjang ke bawah */
+      min-height: 560px; /* <-- lebih panjang ke bawah */
     }
 
     /* TEXT FRAME (box untuk area tulisan saja) */
@@ -217,9 +237,7 @@
     }
 
     /* 3 big service highlight cards */
-    .pill-cards{
-      padding: 14px 0 26px;
-    }
+    .pill-cards{ padding: 14px 0 26px; }
     .pill-grid{
       display:grid;
       grid-template-columns: repeat(3, 1fr);
@@ -235,17 +253,8 @@
       min-height: 132px;
     }
     .pill:hover{transform: translateY(-1px); box-shadow: 0 16px 30px rgba(15,23,42,.10)}
-    .pill h3{
-      margin: 0 0 6px;
-      font-size: 16px;
-      letter-spacing: -0.01em;
-    }
-    .pill p{
-      margin: 0;
-      color: var(--muted);
-      font-size: 13.5px;
-      line-height: 1.6;
-    }
+    .pill h3{ margin: 0 0 6px; font-size: 16px; letter-spacing: -0.01em; }
+    .pill p{ margin: 0; color: var(--muted); font-size: 13.5px; line-height: 1.6; }
     .pill.tk{background: rgba(136,171,142,.14); border-color: rgba(136,171,142,.22)}
     .pill.kp{background: rgba(255,181,112,.18); border-color: rgba(255,181,112,.28)}
     .pill.ak{background: rgba(246,240,235,.95); border-color: rgba(15,23,42,.05)}
@@ -259,26 +268,11 @@
       gap: 14px;
       margin-bottom: 14px;
     }
-    .section-title h2{
-      margin:0;
-      font-size: 26px;
-      letter-spacing: -0.02em;
-    }
-    .section-title p{
-      margin: 0;
-      color: var(--muted);
-      font-size: 14px;
-      line-height: 1.6;
-      max-width: 62ch;
-    }
+    .section-title h2{ margin:0; font-size: 26px; letter-spacing: -0.02em; }
+    .section-title p{ margin: 0; color: var(--muted); font-size: 14px; line-height: 1.6; max-width: 62ch; }
 
-    /* service lists (3 columns with bullets) */
-    .svc-grid{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-      margin-top: 14px;
-    }
+    /* service lists */
+    .svc-grid{ display:grid; grid-template-columns: repeat(3, 1fr); gap: 14px; margin-top: 14px; }
     .svc-card{
       border-radius: var(--radius);
       padding: 18px 18px 16px;
@@ -286,74 +280,28 @@
       box-shadow: var(--shadow-soft);
       border: 1px solid rgba(15,23,42,.06);
     }
-    .svc-card header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-    .svc-card header b{
-      font-size: 16px;
-      letter-spacing: -0.01em;
-    }
-    .svc-card small{
-      color: var(--muted);
-      font-size: 13px;
-    }
-    .svc-card ul{
-      margin: 10px 0 0;
-      padding: 0 0 0 18px;
-      color: var(--muted);
-      line-height: 1.7;
-      font-size: 14px;
-    }
+    .svc-card header{ display:flex; align-items:center; justify-content:space-between; gap: 10px; margin-bottom: 10px; }
+    .svc-card header b{ font-size: 16px; letter-spacing: -0.01em; }
+    .svc-card small{ color: var(--muted); font-size: 13px; }
+    .svc-card ul{ margin: 10px 0 0; padding: 0 0 0 18px; color: var(--muted); line-height: 1.7; font-size: 14px; }
 
     /* gallery */
-    .gallery{
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
-      margin-top: 14px;
-    }
+    .gallery{ display:grid; grid-template-columns: repeat(3, 1fr); gap: 14px; margin-top: 14px; }
     .gcard{
       border-radius: var(--radius);
       background: rgba(255,255,255,.88);
       box-shadow: var(--shadow-soft);
       overflow:hidden;
       border: 1px solid rgba(15,23,42,.06);
+      transform: translateZ(0);
     }
-    .gcard .ph{
-      aspect-ratio: 4 / 3;
-      background: rgba(246,240,235,.8);
-      overflow:hidden;
-    }
-    .gcard img{
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-    .gcard .cap{
-      padding: 12px 14px 13px;
-      color: var(--muted);
-      font-size: 13.5px;
-      line-height: 1.5;
-    }
-    .gcard .cap b{
-      display:block;
-      color: var(--ink);
-      font-size: 14px;
-      margin-bottom: 3px;
-    }
+    .gcard .ph{ aspect-ratio: 4 / 3; background: rgba(246,240,235,.8); overflow:hidden; }
+    .gcard img{ width: 100%; height: 100%; object-fit: cover; }
+    .gcard .cap{ padding: 12px 14px 13px; color: var(--muted); font-size: 13.5px; line-height: 1.5; }
+    .gcard .cap b{ display:block; color: var(--ink); font-size: 14px; margin-bottom: 3px; }
 
     /* contact */
-    .contact-grid{
-      display:grid;
-      grid-template-columns: 1fr 1.2fr;
-      gap: 14px;
-      margin-top: 14px;
-      align-items:stretch;
-    }
+    .contact-grid{ display:grid; grid-template-columns: 1fr 1.2fr; gap: 14px; margin-top: 14px; align-items:stretch; }
     .panel{
       border-radius: var(--radius);
       background: rgba(255,255,255,.88);
@@ -361,22 +309,8 @@
       border: 1px solid rgba(15,23,42,.06);
       padding: 18px;
     }
-    .info-row{
-      display:flex;
-      gap: 10px;
-      margin: 12px 0;
-      color: var(--muted);
-      line-height: 1.6;
-      font-size: 14px;
-    }
-    .dot{
-      width: 10px;
-      height: 10px;
-      border-radius: 999px;
-      background: rgba(136,171,142,.7);
-      margin-top: 6px;
-      flex: 0 0 auto;
-    }
+    .info-row{ display:flex; gap: 10px; margin: 12px 0; color: var(--muted); line-height: 1.6; font-size: 14px; }
+    .dot{ width: 10px; height: 10px; border-radius: 999px; background: rgba(136,171,142,.7); margin-top: 6px; flex: 0 0 auto; }
     .map{
       border-radius: var(--radius);
       overflow:hidden;
@@ -384,6 +318,7 @@
       box-shadow: var(--shadow-soft);
       background: rgba(246,240,235,.8);
       min-height: 360px;
+      transform: translateZ(0);
     }
     iframe{border:0; width:100%; height:100%}
 
@@ -392,46 +327,20 @@
       color: rgba(71,85,105,.9);
       font-size: 13px;
     }
-    .foot{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap: 12px;
-      flex-wrap: wrap;
-    }
-    .foot .mini{
-      display:flex;
-      align-items:center;
-      gap: 10px;
-    }
-.foot .mini img{
-  height: 36px;  
-  width: auto;
-  object-fit: contain;
-  opacity: .95;
-    }
+    .foot{ display:flex; align-items:center; justify-content:space-between; gap: 12px; flex-wrap: wrap; }
+    .foot .mini{ display:flex; align-items:center; gap: 10px; }
+    .foot .mini img{ height: 36px; width: auto; object-fit: contain; opacity: .95; }
 
     /* responsive */
     @media (max-width: 980px){
       .hero-inner{ padding: 26px 0 22px; }
-      .hero-grid{
-        grid-template-columns: 1fr;
-        min-height: 620px; /* still tall */
-      }
-      .hero-card::after{
-        background-position: center;
-        background-size: cover;
-        transform: scale(1.02);
-      }
+      .hero-grid{ grid-template-columns: 1fr; min-height: 680px; }
+      .hero-card::after{ background-position: center; background-size: cover; transform: scale(1.03); }
       .hero-card::before{
         background:
           linear-gradient(180deg, rgba(255,255,255,.88) 0%, rgba(255,255,255,.60) 45%, rgba(255,255,255,0) 80%);
       }
-      .hero-panel{
-        padding: 22px 18px 16px;
-        margin-top: 180px; /* makes room for illustration */
-        max-width: unset;
-      }
+      .hero-panel{ padding: 22px 18px 16px; margin-top: 190px; max-width: unset; }
       .pill-grid, .svc-grid, .gallery, .contact-grid{ grid-template-columns: 1fr; }
       .nav-inner{padding: 18px 0}
       .brand{min-width: unset}
@@ -483,7 +392,6 @@
                 </div>
               </div>
 
-              <!-- right column intentionally empty, illustration is full background -->
               <div aria-hidden="true"></div>
             </div>
           </div>
