--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               <span class="dot"></span>
               <div>
                 <b style="display:block;color:var(--ink)">Jam Operasional</b>
-                Senin–Sabtu · 09:00–17:00
+                Senin–Sabtu · 09:00–17:00 WIB
               </div>
             </div>
 
