--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <div class="hero-grid">
               <div>
                 <div class="hero-panel">
-                  <h1>Dampingi Tumbuh Kembang Anak Dengan Profesional Dan Terarah.</h1>
+                  <h1>Dampingi Tumbuh Kembang Anak Dengan Profesional Dan Terarah</h1>
                   <p>
                     Calthera adalah klinik psikologi &amp; tumbuh kembang anak di Pekanbaru.
                     Kami melayani <b>screening</b>, <b>terapi anak</b>, <b>konseling</b>, <b>asesmen psikologis</b>, dan <b>psikoterapi</b>.
@@ -400,7 +400,7 @@
 
       <div class="container">
         <div class="focus">
-          Membantu anak &amp; keluarga memahami kebutuhan, menyusun rencana, dan menjalankan pendampingan secara konsisten — dengan komunikasi yang mudah dipahami.
+          Membantu anak &amp; keluarga memahami kebutuhan, menyusun rencana, dan menjalankan pendampingan secara konsisten dengan komunikasi yang mudah dipahami.
         </div>
 
         <div class="pill-cards">
@@ -411,11 +411,11 @@
             </div>
             <div class="pill kp">
               <h3>Konseling &amp; Psikoterapi</h3>
-              <p>Ruang aman untuk anak, remaja, dewasa, pasangan, dan keluarga — dengan pendekatan profesional.</p>
+              <p>Ruang aman untuk anak, remaja, dewasa, pasangan, dan keluarga dengan pendekatan profesional.</p>
             </div>
             <div class="pill ak">
               <h3>Asesmen Klinis</h3>
-              <p>Pemeriksaan psikologis terstruktur untuk memahami kondisi, kekuatan, dan kebutuhan — sebagai dasar rekomendasi yang jelas.</p>
+              <p>Pemeriksaan psikologis terstruktur untuk memahami kondisi, kekuatan, dan kebutuhan sebagai dasar rekomendasi yang jelas.</p>
             </div>
           </div>
         </div>
