--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         <div class="section-title">
           <div>
             <h2>Klinik</h2>
-            <p>Beberapa suasana ruang di Calthera.</p>
+            <p>Beberapa suasana ruangan di Calthera.</p>
           </div>
         </div>
 
@@ -513,7 +513,7 @@
 
           <div class="gcard">
             <div class="ph"><img src="assetsclinic-3.jpg" alt="Ruang klinik Calthera"></div>
-            <div class="cap"><b>Area Klinik</b>Suasana bersih dan tertata.</div>
+            <div class="cap"><b>Ruang Terapi Anak</b>Suasana bersih dan tertata.</div>
           </div>
 
           <div class="gcard">
@@ -523,7 +523,7 @@
 
           <div class="gcard">
             <div class="ph"><img src="assetsclinic-psy-2.jpg" alt="Ruang psikolog Calthera (2)"></div>
-            <div class="cap"><b>Ruang Psikolog</b>Alternatif ruangan sesi lainnya.</div>
+            <div class="cap"><b>Ruang Konseling</b>Alternatif ruangan sesi lainnya.</div>
           </div>
         </div>
       </div>
